--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
 		<title>Vite App</title>
 	</head>
 	<body>
+		<div class="wrapper">
+			<header class="header">
+				<div class="container header__container">
+					<div class="header__inner">
+						<div class="header__logo">
+							<a class="header__logo-link" href="#">
+								<img class="header__logo-img" src="/images/Logo.png" alt="logo" />
+							</a>
+						</div>
+						<nav class="header__menu">
+							<a class="header__menu-item menu-item--active" href="#main">Main</a>
+							<a class="header__menu-item" href="#services">Services</a>
+							<a class="header__menu-item" href="#company">Company</a>
+							<a class="header__menu-item" href="#partners">Partners</a>
+							<a class="header__menu-item" href="#cases">Cases</a>
+							<a class="header__menu-item" href="#contacts">Contacts</a>
+						</nav>
+
+						<div class="header__btns">
+							<button class="header__callback-btn" type="button">
+								<span class="callback-btn__text">Get in touch</span>
+								<img class="callback-btn__img" src="/icons/callback-btn-icon.svg" alt="callback button icon" />
+							</button>
+
+							<button class="header__login-btn" type="button">Login</button>
+
+							<button class="header__burger-btn">
+								<span class="header__burger-line"></span>
+								<span class="header__burger-line"></span>
+								<span class="header__burger-line"></span>
+							</button>
+						</div>
+					</div>
+				</div>
+			</header>
+		</div>
 		<script type="module" src="/src/js/main.js"></script>
 	</body>
 </html>
