--- a/index.html
+++ b/index.html
@@ -42,6 +42,82 @@
 					</div>
 				</div>
 			</header>
+
+			<main class="main">
+				<section class="main-banner">
+					<div class="main-banner__bg section-bg">
+						<img class="main-banner__bg-img" src="/images/main-banner-bg.webp" alt="banner background image" />
+					</div>
+					<div class="container main-banner__container">
+						<div class="main-banner__inner">
+							<h1 class="main-banner__title">Portable Space</h1>
+							<div class="main-banner__top">
+								<div class="main-banner__quote">
+									<p class="main-banner__quote-text">
+										Discover a wide range of high-quality products designed to simplify your life and bring joyto your everyday
+										moments
+									</p>
+									<p class="main-banner__quote-author">wall street journal, Mike Lopes</p>
+								</div>
+								<div class="main-banner__quote">
+									<p class="main-banner__quote-text">
+										Unlock Your super Brain's Full Potential The Breakthrough Solution for first Memory, Focus, and Mental total
+										Clarity
+									</p>
+									<p class="main-banner__quote-author">Times daily, christopher miller</p>
+								</div>
+							</div>
+							<div class="main-banner__content">
+								<div class="main-banner__center">
+									<img class="main-banner__center-img" src="/images/container-img.png" alt="container image" />
+								</div>
+								<div class="main-banner__company delivery-company dhl-company">
+									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+									<h3 class="delivery-company__title">Unlock Your Brain'sFull Potentia</h3>
+									<div class="delivery-company__descr">
+										Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+									</div>
+									<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
+								</div>
+								<div class="main-banner__company delivery-company fedex-company">
+									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+									<h3 class="delivery-company__title">Move Effortlesslyin just minutes</h3>
+									<div class="delivery-company__descr">
+										Explore a variety of premium products crafted to make life easier and brighter.
+									</div>
+									<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
+								</div>
+								<div class="main-banner__company delivery-company amazon-company">
+									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+									<h3 class="delivery-company__title">Global Support</h3>
+									<div class="delivery-company__descr">
+										The largest logistics companies in the world work and cooperate with us
+									</div>
+									<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+								</div>
+							</div>
+							<div class="main-banner__bottom">
+								<div class="main-banner__bottom-item bottom-item why-us">
+									<p class="bottom-item__descr why-us__descr">why us</p>
+									<p class="bottom-item__text why-us__text">
+										Tailoring portable solutions
+										<span class="why-us__text--white">for all industries</span>
+									</p>
+								</div>
+								<div class="main-banner__bottom-item bottom-item leading-way">
+									<div class="leading-way__col">
+										<p class="bottom-item__text leading-way__text">Leading the way forward</p>
+										<p class="bottom-item__descr leading-way__descr">Leading the way forward</p>
+									</div>
+									<div class="leading-way__col">
+										<p class="bottom-item__count leading-way__count">+450</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</main>
 		</div>
 		<script type="module" src="/src/js/main.js"></script>
 	</body>
