add top and bottom content

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<div class="main-banner__bottom-item bottom-item leading-way">
 									<div class="leading-way__col">
 										<p class="bottom-item__text leading-way__text">Leading the way forward</p>
-										<p class="bottom-item__descr leading-way__descr">Leading the way forward</p>
+										<p class="bottom-item__descr leading-way__descr">More 450 industry leaders trast us</p>
 									</div>
 									<div class="leading-way__col">
 										<p class="bottom-item__count leading-way__count">+450</p>
