add desctop layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+		<link rel="shortcut icon" href="/icons/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+		<link rel="manifest" href="/icons/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Containe TM</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -48,9 +52,9 @@
 					<div class="main-banner__bg section-bg">
 						<img class="main-banner__bg-img" src="/images/main-banner-bg.webp" alt="banner background image" />
 					</div>
+					<h1 class="main-banner__title">Portable Space</h1>
 					<div class="container main-banner__container">
 						<div class="main-banner__inner">
-							<h1 class="main-banner__title">Portable Space</h1>
 							<div class="main-banner__top">
 								<div class="main-banner__quote">
 									<p class="main-banner__quote-text">
@@ -72,28 +76,34 @@
 									<img class="main-banner__center-img" src="/images/container-img.png" alt="container image" />
 								</div>
 								<div class="main-banner__company delivery-company dhl-company">
-									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-									<h3 class="delivery-company__title">Unlock Your Brain'sFull Potentia</h3>
-									<div class="delivery-company__descr">
-										Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+									<div class="delivery-company__info">
+										<h3 class="delivery-company__title">Unlock Your Brain's Full Potentia</h3>
+										<div class="delivery-company__descr">
+											Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+										</div>
+										<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
 									</div>
-									<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
+									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
 								</div>
 								<div class="main-banner__company delivery-company fedex-company">
 									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-									<h3 class="delivery-company__title">Move Effortlesslyin just minutes</h3>
-									<div class="delivery-company__descr">
-										Explore a variety of premium products crafted to make life easier and brighter.
+									<div class="delivery-company__info">
+										<h3 class="delivery-company__title">Move Effortlesslyin just minutes</h3>
+										<div class="delivery-company__descr">
+											Explore a variety of premium products crafted to make life easier and brighter.
+										</div>
+										<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
 									</div>
-									<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
 								</div>
 								<div class="main-banner__company delivery-company amazon-company">
 									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-									<h3 class="delivery-company__title">Global Support</h3>
-									<div class="delivery-company__descr">
-										The largest logistics companies in the world work and cooperate with us
+									<div class="delivery-company__info">
+										<h3 class="delivery-company__title">Global Support</h3>
+										<div class="delivery-company__descr">
+											The largest logistics companies in the world work and cooperate with us
+										</div>
+										<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
 									</div>
-									<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
 								</div>
 							</div>
 							<div class="main-banner__bottom">
