--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
-		<link rel="shortcut icon" href="/icons/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-		<link rel="manifest" href="/icons/site.webmanifest" />
+		<link rel="icon" type="image/png" href="/icons/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/icons/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/icons/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/favicon/apple-touch-icon.png" />
+		<link rel="manifest" href="/icons/favicon/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Containe TM</title>
 	</head>
@@ -38,7 +38,6 @@
 							<button class="header__login-btn" type="button">Login</button>
 
 							<button class="header__burger-btn">
-								<span class="header__burger-line"></span>
 								<span class="header__burger-line"></span>
 								<span class="header__burger-line"></span>
 							</button>
@@ -74,35 +73,44 @@
 							<div class="main-banner__content">
 								<div class="main-banner__center">
 									<img class="main-banner__center-img" src="/images/container-img.png" alt="container image" />
-								</div>
-								<div class="main-banner__company delivery-company dhl-company">
-									<div class="delivery-company__info">
-										<h3 class="delivery-company__title">Unlock Your Brain's Full Potentia</h3>
-										<div class="delivery-company__descr">
-											Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+									<div class="main-banner__company delivery-company dhl-company">
+										<div class="delivery-company__inner">
+											<div class="delivery-company__info">
+												<h3 class="delivery-company__title">Unlock Your Brain's Full Potentia</h3>
+												<div class="delivery-company__descr">
+													Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+												</div>
+												<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
+											</div>
+											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
 										</div>
-										<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
 									</div>
-									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-								</div>
-								<div class="main-banner__company delivery-company fedex-company">
-									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-									<div class="delivery-company__info">
-										<h3 class="delivery-company__title">Move Effortlesslyin just minutes</h3>
-										<div class="delivery-company__descr">
-											Explore a variety of premium products crafted to make life easier and brighter.
+									<div class="main-banner__company delivery-company fedex-company">
+										<div class="delivery-company__inner">
+											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+											<div class="delivery-company__info">
+												<h3 class="delivery-company__title">Move Effortlessly in just minutes</h3>
+												<div class="delivery-company__descr">
+													Explore a variety of premium products crafted to make life easier and brighter.
+												</div>
+												<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
+											</div>
 										</div>
-										<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
 									</div>
-								</div>
-								<div class="main-banner__company delivery-company amazon-company">
-									<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-									<div class="delivery-company__info">
-										<h3 class="delivery-company__title">Global Support</h3>
-										<div class="delivery-company__descr">
-											The largest logistics companies in the world work and cooperate with us
+									<div class="main-banner__company delivery-company amazon-company">
+										<div class="delivery-company__inner">
+											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+											<div class="delivery-company__info">
+												<h3 class="delivery-company__title">Global Support</h3>
+												<div class="delivery-company__descr">
+													The largest logistics companies in the world work and cooperate with us
+												</div>
+												<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+											</div>
 										</div>
-										<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+									</div>
+									<div class="main-banner__shadow">
+										<img class="main-banner__shadow-img" src="/images/container-shadow.svg" alt="container shadow" />
 									</div>
 								</div>
 							</div>
