--- a/index.html
+++ b/index.html
@@ -73,44 +73,264 @@
 							<div class="main-banner__content">
 								<div class="main-banner__center">
 									<img class="main-banner__center-img" src="/images/container-img.png" alt="container image" />
-									<div class="main-banner__company delivery-company dhl-company">
-										<div class="delivery-company__inner">
-											<div class="delivery-company__info">
-												<h3 class="delivery-company__title">Unlock Your Brain's Full Potentia</h3>
-												<div class="delivery-company__descr">
-													Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+									<div class="main-banner__center-inner">
+										<div class="main-banner__company delivery-company dhl-company" data-company="dhl">
+											<div class="delivery-company__inner">
+												<div class="delivery-company__info">
+													<h3 class="delivery-company__title">Unlock Your Brain's Full Potentia</h3>
+													<div class="delivery-company__descr">
+														Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+													</div>
+													<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
 												</div>
-												<img class="delivery-company__img" src="/images/dhl-logo.svg" alt="dhl logo" />
+												<div class="delivery-company__decor">
+													<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor" />
+													<svg
+														class="delivery-company__circle"
+														width="40"
+														height="40"
+														viewBox="0 0 40 40"
+														fill="none"
+														xmlns="http://www.w3.org/2000/svg"
+													>
+														<foreignObject x="-20" y="-20" width="80" height="80">
+															<div
+																xmlns="http://www.w3.org/1999/xhtml"
+																style="
+																	backdrop-filter: blur(10px);
+																	clip-path: url(#bgblur_0_5_185_clip_path);
+																	height: 100%;
+																	width: 100%;
+																"
+															></div>
+														</foreignObject>
+														<g data-figma-bg-blur-radius="20">
+															<circle
+																cx="20"
+																cy="20"
+																r="20"
+																transform="matrix(-1 0 0 1 40 0)"
+																fill="#547089"
+																fill-opacity="0.15"
+															/>
+															<circle
+																cx="20"
+																cy="20"
+																r="19.5"
+																transform="matrix(-1 0 0 1 40 0)"
+																stroke="white"
+																stroke-opacity="0.08"
+															/>
+														</g>
+														<circle cx="5" cy="5" r="5" transform="matrix(-1 0 0 1 25 15)" fill="white" />
+														<defs>
+															<clipPath id="bgblur_0_5_185_clip_path" transform="translate(20 20)">
+																<circle cx="20" cy="20" r="20" transform="matrix(-1 0 0 1 40 0)" />
+															</clipPath>
+														</defs>
+													</svg>
+												</div>
 											</div>
-											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
 										</div>
-									</div>
-									<div class="main-banner__company delivery-company fedex-company">
-										<div class="delivery-company__inner">
-											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-											<div class="delivery-company__info">
-												<h3 class="delivery-company__title">Move Effortlessly in just minutes</h3>
-												<div class="delivery-company__descr">
-													Explore a variety of premium products crafted to make life easier and brighter.
+										<div class="main-banner__company delivery-company fedex-company" data-company="fedex">
+											<div class="delivery-company__inner">
+												<div class="delivery-company__decor">
+													<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+													<svg
+														class="delivery-company__circle"
+														width="40"
+														height="40"
+														viewBox="0 0 40 40"
+														fill="none"
+														xmlns="http://www.w3.org/2000/svg"
+													>
+														<foreignObject x="-20" y="-20" width="80" height="80">
+															<div
+																xmlns="http://www.w3.org/1999/xhtml"
+																style="
+																	backdrop-filter: blur(10px);
+																	clip-path: url(#bgblur_0_5_185_clip_path);
+																	height: 100%;
+																	width: 100%;
+																"
+															></div>
+														</foreignObject>
+														<g data-figma-bg-blur-radius="20">
+															<circle
+																cx="20"
+																cy="20"
+																r="20"
+																transform="matrix(-1 0 0 1 40 0)"
+																fill="#547089"
+																fill-opacity="0.15"
+															/>
+															<circle
+																cx="20"
+																cy="20"
+																r="19.5"
+																transform="matrix(-1 0 0 1 40 0)"
+																stroke="white"
+																stroke-opacity="0.08"
+															/>
+														</g>
+														<circle cx="5" cy="5" r="5" transform="matrix(-1 0 0 1 25 15)" fill="white" />
+														<defs>
+															<clipPath id="bgblur_0_5_185_clip_path" transform="translate(20 20)">
+																<circle cx="20" cy="20" r="20" transform="matrix(-1 0 0 1 40 0)" />
+															</clipPath>
+														</defs>
+													</svg>
 												</div>
-												<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
+												<div class="delivery-company__info">
+													<h3 class="delivery-company__title">Move Effortlessly in just minutes</h3>
+													<div class="delivery-company__descr">
+														Explore a variety of premium products crafted to make life easier and brighter.
+													</div>
+													<img class="delivery-company__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="main-banner__company delivery-company amazon-company">
-										<div class="delivery-company__inner">
-											<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
-											<div class="delivery-company__info">
-												<h3 class="delivery-company__title">Global Support</h3>
-												<div class="delivery-company__descr">
-													The largest logistics companies in the world work and cooperate with us
+										<div class="main-banner__company delivery-company amazon-company" data-company="amazon">
+											<div class="delivery-company__inner">
+												<div class="delivery-company__decor">
+													<img class="delivery-company__line" src="/images/delivery-line.svg" alt="decor line" />
+													<svg
+														class="delivery-company__circle"
+														width="40"
+														height="40"
+														viewBox="0 0 40 40"
+														fill="none"
+														xmlns="http://www.w3.org/2000/svg"
+													>
+														<foreignObject x="-20" y="-20" width="80" height="80">
+															<div
+																xmlns="http://www.w3.org/1999/xhtml"
+																style="
+																	backdrop-filter: blur(10px);
+																	clip-path: url(#bgblur_0_5_185_clip_path);
+																	height: 100%;
+																	width: 100%;
+																"
+															></div>
+														</foreignObject>
+														<g data-figma-bg-blur-radius="20">
+															<circle
+																cx="20"
+																cy="20"
+																r="20"
+																transform="matrix(-1 0 0 1 40 0)"
+																fill="#547089"
+																fill-opacity="0.15"
+															/>
+															<circle
+																cx="20"
+																cy="20"
+																r="19.5"
+																transform="matrix(-1 0 0 1 40 0)"
+																stroke="white"
+																stroke-opacity="0.08"
+															/>
+														</g>
+														<circle cx="5" cy="5" r="5" transform="matrix(-1 0 0 1 25 15)" fill="white" />
+														<defs>
+															<clipPath id="bgblur_0_5_185_clip_path" transform="translate(20 20)">
+																<circle cx="20" cy="20" r="20" transform="matrix(-1 0 0 1 40 0)" />
+															</clipPath>
+														</defs>
+													</svg>
 												</div>
-												<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+												<div class="delivery-company__info">
+													<h3 class="delivery-company__title">
+														Global Support
+														<br />
+														<span>Global Support</span>
+													</h3>
+													<div class="delivery-company__descr">
+														The largest logistics companies in the world work and cooperate with us
+													</div>
+													<img class="delivery-company__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+												</div>
 											</div>
 										</div>
 									</div>
 									<div class="main-banner__shadow">
 										<img class="main-banner__shadow-img" src="/images/container-shadow.svg" alt="container shadow" />
+									</div>
+
+									<div class="main-banner__company-point dhl-point" data-company="dhl">
+										<svg class="test" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<foreignObject x="-20" y="-20" width="80" height="80">
+												<div
+													xmlns="http://www.w3.org/1999/xhtml"
+													style="
+														backdrop-filter: blur(10px);
+														clip-path: url(#bgblur_0_5_153_clip_path);
+														height: 100%;
+														width: 100%;
+													"
+												></div>
+											</foreignObject>
+											<g data-figma-bg-blur-radius="20">
+												<circle cx="20" cy="20" r="20" fill="#547089" fill-opacity="0.15" />
+												<circle cx="20" cy="20" r="19.5" stroke="white" stroke-opacity="0.08" />
+											</g>
+											<circle class="circle--active" cx="20" cy="20" r="5" fill="white" />
+											<defs>
+												<clipPath id="bgblur_0_5_153_clip_path" transform="translate(20 20)">
+													<circle cx="20" cy="20" r="20" />
+												</clipPath>
+											</defs>
+										</svg>
+									</div>
+									<div class="main-banner__company-point fedex-point" data-company="fedex">
+										<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<foreignObject x="-20" y="-20" width="80" height="80">
+												<div
+													xmlns="http://www.w3.org/1999/xhtml"
+													style="
+														backdrop-filter: blur(10px);
+														clip-path: url(#bgblur_0_5_153_clip_path);
+														height: 100%;
+														width: 100%;
+													"
+												></div>
+											</foreignObject>
+											<g data-figma-bg-blur-radius="20">
+												<circle cx="20" cy="20" r="20" fill="#547089" fill-opacity="0.15" />
+												<circle cx="20" cy="20" r="19.5" stroke="white" stroke-opacity="0.08" />
+											</g>
+											<circle class="circle--active" cx="20" cy="20" r="5" fill="white" />
+											<defs>
+												<clipPath id="bgblur_0_5_153_clip_path" transform="translate(20 20)">
+													<circle cx="20" cy="20" r="20" />
+												</clipPath>
+											</defs>
+										</svg>
+									</div>
+									<div class="main-banner__company-point amazon-point" data-company="amazon">
+										<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<foreignObject x="-20" y="-20" width="80" height="80">
+												<div
+													xmlns="http://www.w3.org/1999/xhtml"
+													style="
+														backdrop-filter: blur(10px);
+														clip-path: url(#bgblur_0_5_153_clip_path);
+														height: 100%;
+														width: 100%;
+													"
+												></div>
+											</foreignObject>
+											<g data-figma-bg-blur-radius="20">
+												<circle cx="20" cy="20" r="20" fill="#547089" fill-opacity="0.15" />
+												<circle cx="20" cy="20" r="19.5" stroke="white" stroke-opacity="0.08" />
+											</g>
+											<circle class="circle--active" cx="20" cy="20" r="5" fill="white" />
+											<defs>
+												<clipPath id="bgblur_0_5_153_clip_path" transform="translate(20 20)">
+													<circle cx="20" cy="20" r="20" />
+												</clipPath>
+											</defs>
+										</svg>
 									</div>
 								</div>
 							</div>
