add swiper slider

--- a/index.html
+++ b/index.html
@@ -347,8 +347,69 @@
 									</div>
 								</div>
 							</div>
-							<div class="main-banner__slider">
-								<h1>SLIDER</h1>
+							<div class="main-banner__slider main-slider">
+								<div class="main-slider-swiper swiper">
+									<div class="swiper-wrapper">
+										<div class="main-slider__slide swiper-slide">
+											<div class="main-slider__company dhl-slide" data-company="dhl">
+												<div class="main-slider__info">
+													<h3 class="main-slider__title">Unlock Your Brain's Full Potentia</h3>
+													<div class="main-slider__descr">
+														Efficient logistics transportation ensures fast and reliable delivery of goods worldwide.
+													</div>
+													<img class="main-slider__img" src="/images/dhl-logo.svg" alt="dhl logo" />
+												</div>
+											</div>
+										</div>
+										<div class="main-slider__slide swiper-slide">
+											<div class="main-slider__company fedex-slide" data-company="fedex">
+												<div class="main-slider__info">
+													<h3 class="main-slider__title">Move Effortlessly in just minutes</h3>
+													<div class="main-slider__descr">
+														Explore a variety of premium products crafted to make life easier and brighter.
+													</div>
+													<img class="main-slider__img" src="/images/fedex-logo.svg" alt="fedex Logo" />
+												</div>
+											</div>
+										</div>
+										<div class="main-slider__slide swiper-slide">
+											<div class="main-slider__company amazon-slide" data-company="amazon">
+												<div class="main-slider__info">
+													<h3 class="main-slider__title">
+														Global Support
+														<br />
+														<span>Global Support</span>
+													</h3>
+													<div class="main-slider__descr">
+														The largest logistics companies in the world work and cooperate with us
+													</div>
+													<img class="main-slider__img" src="/images/amazon-logo.svg" alt="amazon logo" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="main-slider__controls">
+									<div class="main-slider-btn-prev">
+										<svg width="11" height="12" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path
+												opacity="0.2"
+												d="M10.4999 1.59351C10.5132 0.383183 9.31529 -0.388911 8.34368 0.203747L1.23878 4.53756C0.267175 5.13022 0.250553 6.64314 1.20887 7.26081L8.21654 11.7775C9.17485 12.3952 10.3894 11.6544 10.4027 10.4441L10.4999 1.59351Z"
+												fill="white"
+											/>
+										</svg>
+									</div>
+									<div class="main-slider-pagination"></div>
+									<div class="main-slider-btn-next">
+										<svg width="11" height="12" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path
+												opacity="0.2"
+												d="M10.4999 1.59351C10.5132 0.383183 9.31529 -0.388911 8.34368 0.203747L1.23878 4.53756C0.267175 5.13022 0.250553 6.64314 1.20887 7.26081L8.21654 11.7775C9.17485 12.3952 10.3894 11.6544 10.4027 10.4441L10.4999 1.59351Z"
+												fill="white"
+											/>
+										</svg>
+									</div>
+								</div>
 							</div>
 							<div class="main-banner__bottom">
 								<div class="main-banner__bottom-item bottom-item why-us">
